First version of parser which will be used for loading game maps